# osrs-equipment-tools

./: .gitignore  Cargo.toml  Makefile.toml  README.md  clippy.toml  index-cf53f00ff5207471.css  index-fa2417bb9edea1d7.js  index-fa2417bb9edea1d7_bg.wasm  index.html  items.bin.xz
.github/workflows/: deployment.yml  integration.yml
css/: buttons.css  equipment.css  main.css
data/: Cargo.toml  items.bin.xz
data-processor/: Cargo.toml
data-processor/src/: aggregate.rs  filter.rs  main.rs  map.rs  osrsbox.rs
data-processor/src/aggregate/: broodoo.rs  capes.rs  damaged_book.rs  god_armour.rs  god_dhide.rs  gods.rs  halo.rs  hunter_gear.rs  other_gods.rs  skill_capes.rs  team_capes.rs  vestment.rs
data-processor/src/filter/: barrows.rs  charges.rs  cosmetic.rs  dmm.rs  fire_arrow.rs  heraldic.rs  misc.rs  poison.rs  suffixes.rs
data-processor/src/map/: clues.rs  third_age.rs
data-processor/src/osrsbox/: item_equipment.rs  item_properties.rs  item_requirement.rs  item_weapon.rs  mod.rs
data/src/: damage_type.rs  database.rs  item.rs  lib.rs
data/src/item/: attainability.rs  combat_stats.rs  equip_slot.rs  requirement.rs  weapon_data.rs
pkg/: package.d.ts  package.js  package.json  package_bg.wasm  package_bg.wasm.d.ts
regions/: Cargo.toml
regions/src/: bool_expr.rs  data.rs  lib.rs  vars.rs
regions/src/data/: asgarnia.rs  desert.rs  fremennik.rs  kandarin.rs  misc.rs  morytania.rs  rfd.rs  tirannwn.rs  wilderness.rs
src/: event.rs  gen_filter.rs  lib.rs  main.rs  model.rs
src/model/: filter.rs  region_filter.rs  sorting.rs
src/osrsbox/: equipment_storage.rs  item.rs  loader.rs  mod.rs
src/osrsbox/item/: stats.rs  weapon.rs
src/ui/: equipment_view.rs  list_view.rs  mod.rs  region_buttons.rs  sorting_preset_buttons.rs  stats_view.rs
trailblazer/: Cargo.toml
trailblazer/src/: bool_expr.rs  data.rs  lib.rs  vars.rs
trailblazer/src/data/: asgarnia.rs  desert.rs  fremennik.rs  kandarin.rs  misc.rs  mod.rs  morytania.rs  rfd.rs  wilderness.rs
