[package]
name = "osrs-equipment-tools"
version = "0.1.0"
authors = ["Reisz <Reisz@users.noreply.github.com>"]
edition = "2018"
description = "Static web app for everything concerning equipment in Old School RuneScape"
readme = "./README.md"
repository = "https://github.com/seed-rs/seed-quickstart"
license-file = "./LICENSE"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
data = { path = "data" }
enum-iterator = "0.6"
lzma-rs = "0.1"
seed = "0.8"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[workspace]
members = ["data", "data-processor"]
