[package]
name = "data-processor"
version = "0.1.0"
authors = ["Daniel <Reisz@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bincode = "1.3"
data = { path = "../data" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
trailblazer = { path = "../trailblazer" }
xz2 = "0.1"

[dev-dependencies]
serde_json = "1.0"
