[package]
name = "data-processor"
version = "0.1.0"
authors = ["Daniel <Reisz@users.noreply.github.com>"]
edition = "2018"

[dependencies]
base64 = "0.13"
bincode = "1.3"
data = { path = "../data" }
image = "0.23"
lazy_static = "1.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regions = { path = "../regions" }
xz2 = "0.1"
