[package]
name = "data-processor"
version = "0.1.0"
authors = ["Daniel <Reisz@users.noreply.github.com>"]
edition = "2021"

[dependencies]
base64 = "0.13"
bincode = "1.3"
data = { path = "../data" }
enum-iterator = "0.7"
image = "0.23"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regions = { path = "../regions", optional = true }
xz2 = "0.1"

[features]
default = []
trailblazer = ["regions", "data/trailblazer"]
